
* 由營運者部署的應用程式Astra Control可支援與營運者一起部署的部分應用程式。
+
link:../use/manage-apps.html#app-management-requirements["開始管理應用程式"^]



ifdef::azure[]

* 具有資源群組範圍的服務主體Astra Control Service現在支援使用資源群組範圍的服務主體。
+
link:../get-started/set-up-microsoft-azure-with-anf.html#create-an-azure-service-principal-2["建立Azure服務主體"^]



endif::azure[]



== 2021年8月5日

此版本包含下列新功能與增強功能。

* Astra Control Center Astra Control現已推出全新部署模式。_Astra Control Center_是您在資料中心安裝及操作的自我管理軟體、可讓您管理內部部署Kubernetes叢集的Kubernetes應用程式生命週期管理。
+
若要深入瞭解、 https://docs.netapp.com/us-en/astra-control-center["前往Astra Control Center文件"^]。

* 現在您可以利用自己的儲存庫來管理Astra用於備份和複製的儲存庫、方法是新增其他儲存庫、並變更雲端供應商中Kubernetes叢集的預設儲存庫。
+
link:../use/manage-buckets.html["管理儲存庫"^]





== 2021年6月2日

ifdef::gcp[]

此版本包含錯誤修正、以及Google Cloud支援的下列增強功能。

* 支援共享的VPC您現在可以使用共享的VPC網路組態、在GCP專案中管理GKE叢集。
* 在使用CVS服務類型時、CVS服務類型Astra Control Service的持續磁碟區大小現在會建立最小大小為300 GiB的持續磁碟區。
+
link:../learn/choose-class-and-size.html["瞭解Astra Control Service如何使用Cloud Volumes Service 支援Google Cloud的功能作為持續磁碟區的儲存後端"^]。

* GKE工作節點現在支援Container Optimized OS Container Optimized OS。這是支援Ubuntu的附加功能。
+
link:../get-started/set-up-google-cloud.html#gke-cluster-requirements["深入瞭解GKE叢集需求"^]。



endif::gcp[]



== 2021年4月15日

此版本包含下列新功能與增強功能。

ifdef::azure[]

* 支援Astra叢集Astra Control Service現在可管理Azure Kubernetes Service（KS）中受管理Kubernetes叢集上執行的應用程式。
+
link:../get-started/set-up-microsoft-azure-with-anf.html["瞭解如何開始使用"^]。



endif::azure[]

* REST API Astra Control REST API現已可供使用。API以現代技術和目前最佳實務做法為基礎。
+
https://docs.netapp.com/us-en/astra-automation["瞭解如何使用REST API來自動化應用程式資料生命週期管理"^]。

* 年度訂閱Astra Control Service現在提供_Premium訂購_。
+
以折扣價預先付款、每年訂閱一次、可讓您管理每個應用程式套件最多10個應用程式。請聯絡NetApp銷售人員、視組織需求購買任意數量的套件、例如購買3個套件、即可從Astra Control Service管理30個應用程式。

+
如果您管理的應用程式數量超過年度訂閱所允許的數量、則每個應用程式的超額使用率將高達每分鐘$0.005（與Premium PayGo相同）。

+
link:../get-started/intro.html#pricing["深入瞭解Astra Control服務定價"^]。

* 命名空間與應用程式視覺化我們增強了「探索到的應用程式」頁面、以更清楚地顯示命名空間與應用程式之間的階層關係。只要擴充命名空間即可查看該命名空間中所含的應用程式。
+